...
    super.dispose();
  }

  final List<Map<String, dynamic>> gridMenuItems = [
    {
      'icon': Icons.badge_outlined,
      'label': 'Kendaraan',
      'color': const Color(0xFFE63946),
      'route': AppRoutes.userHistoriPengajuan,
    },
    {
      'icon': Icons.assignment_ind_outlined,
      'label': 'Absensi',
      'color': const Color(0xFFE63946),
      'route': AppRoutes.absensi,
    },
    {
      'icon': Icons.qr_code_scanner,
      'label': 'Biometrik',
      'color': const Color(0xFFE63946),
      'route': null,
    },
    {
      'icon': Icons.local_parking,
      'label': 'Parkir',
...
